--- a/.github/workflows/scrape.yaml
+++ b/.github/workflows/scrape.yaml
@@ -4,7 +4,8 @@ on:
   pull_request:
     branches: [main]
   schedule:
-    - cron: "0 20 * * *"  # 📅 Scrape once a day at 8PM, see crontab.guru for help
+    # - cron: "0 20 * * *"  # 📅 Scrape once a day at 8PM, see crontab.guru for help
+    - cron: "0 7,19 */2 * *"  # Runs at 7am and 7pm every other day
 
 name: Scrape Update 🔄
 jobs:
